--- a/thesis/acknowledgement.tex
+++ b/thesis/acknowledgement.tex
@@ -1,5 +1,5 @@
 %----------------------------------------------------------------------------
-\chapter*{Acknowledgement}\addcontentsline{toc}{chapter}{Acknowledgement}
+\chapter*{Acknowledgements}\addcontentsline{toc}{chapter}{Acknowledgement}
 %----------------------------------------------------------------------------
 
-I would like to acknowledge my friend Blumenschein Volfram for helping me by checking my work for grammatical errors.
+I would like to thank my friend Blumenschein Volfram for helping me by checking my work for grammatical errors. I would also like to thank Stephen Jackson for his tutorial, which helped me to understand the basic idea of LALR parser construction algorithm - he tried to make the subject easy to understand, and I think he succeeded.
