--- a/thesis/mybib.bib
+++ b/thesis/mybib.bib
@@ -30,3 +30,63 @@
   organization={Association for Computational Linguistics}
 }
 
+@techreport{kleene1951representation,
+  title={Representation of events in nerve nets and finite automata},
+  author={Kleene, Stephen Cole},
+  year={1951},
+  institution={DTIC Document}
+}
+
+@article{backus1963revised,
+  title={Revised report on the algorithmic language Algol 60},
+  author={Backus, John W and Bauer, FL and Green, J and Katz, C and McCarthy, J and Naur, P and Perlis, AJ and Rutishauser, H and Samelson, K and Vauquois, B and others},
+  journal={The Computer Journal},
+  volume={5},
+  number={4},
+  pages={349--367},
+  year={1963},
+  publisher={Br Computer Soc}
+}
+
+@book{sippu2013parsing,
+  title={Parsing Theory: Volume II LR (k) and LL (k) Parsing},
+  author={Sippu, Seppo and Soisalon-Soininen, Eljas},
+  volume={20},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{redziejowski2007parsing,
+  title={Parsing expression grammar as a primitive recursive-descent parser with backtracking},
+  author={Redziejowski, Roman R},
+  journal={Fundamenta Informaticae},
+  volume={79},
+  number={3-4},
+  pages={513--524},
+  year={2007},
+  publisher={IOS Press}
+}
+
+@article{deremer1982efficient,
+  title={Efficient computation of LALR (1) look-ahead sets},
+  author={DeRemer, Frank and Pennello, Thomas},
+  journal={ACM Transactions on Programming Languages and Systems (TOPLAS)},
+  volume={4},
+  number={4},
+  pages={615--649},
+  year={1982},
+  publisher={ACM}
+}
+
+@article{willink2001meta,
+  title={Meta-Compilation for C++},
+  author={Willink, Edward D},
+  year={2001}
+}
+
+@article{joy2000java,
+  title={Java (TM) Language Specification},
+  author={Joy, Bill and Steele, Guy and Gosling, James and Bracha, Gilad},
+  journal={Addisson-Wesley, June},
+  year={2000}
+}
