--- a/thesis/diploma.tex
+++ b/thesis/diploma.tex
@@ -19,6 +19,7 @@
 \usepackage{sectsty}
 \usepackage{setspace}  % Ettol a tablazatok, abrak, labjegyzetek maradnak 1-es sorkozzel!
 \usepackage[hang]{caption}
+\usepackage{wrapfig}
 \usepackage{hyperref}
 \usepackage{syntax}
 
@@ -111,9 +112,7 @@
 \author{\vikszerzo}
 \title{\viktitle}
 \includeonly{
-	guideline,%
 	project,%
-	projecteng,%
 	titlepage,%
 	declaration,%
 	abstract,%
@@ -122,8 +121,9 @@
 	chapter2,%
 	chapter3,%
 	chapter4,%
+	chapter5,%
+	chapter6,%
 	acknowledgement,%
-	appendices,%
 }
 %--------------------------------------------------------------------------------------
 %	Setup captions
@@ -142,10 +142,10 @@ aboveskip=10pt}
 % Table of contents and the main text
 %--------------------------------------------------------------------------------------
 \begin{document}
-\singlespacing
+\pagenumbering{gobble}
+\onehalfspacing
 %\include{guideline}
 \include{project}
-\include{projecteng}
 
 \pagenumbering{arabic}
 \onehalfspacing
@@ -158,6 +158,8 @@ aboveskip=10pt}
 \include{chapter2}
 \include{chapter3}
 \include{chapter4}
+\include{chapter5}
+\include{chapter6}
 \include{acknowledgement}
 
 %\listoffigures\addcontentsline{toc}{chapter}{Ábrák jegyzéke}
